--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 }
 
 .logo { 
-    background-image: url(/images/amazon_logo.PNG);
+    background-image: url(/images/amazon_logo.png);
     background-size: cover;
     height: 50px;
     width: 100%;
@@ -257,7 +257,12 @@ ul a {
     align-items: center;
 }
 
-
+.logo { 
+    background-image: url(/images/amazon_logo.png);
+    background-size: cover;
+    height: 50px;
+    width: 100px;
+}
 
 .foot-panel4 {
     background-color: #0f1111;
@@ -271,6 +276,9 @@ ul a {
     padding-top: 20px;
 }
 
+.copyright {
+    padding-top: 5px;  
+}
 .copyright {
     padding-top: 5px;  
 }
